# bimi

./: .env  .gitattributes  .gitignore  .halonignore  CMakeLists.txt  Makefile  README.md  bimi.cpp  bimi.functions.json  bimi.hsl  bimi.schema.json  main.hsl  postinst
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
.devcontainer/smtpd/src/config/: smtpd-app.yaml  smtpd.yaml
.devcontainer/smtpd/src/files/: test.hsl
plugin/: Makefile  README.md  SVG_PS-latest.rng  bimi.cpp  bimi.schema.json
